# local-ai

./: .dockerignore  .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
Cloud AI interface/: CloudAI.Interface.csproj
Cloud AI interface/00_Docs/: ARCHITECTURE.md  DESIGN_PRINCIPLES_CHECK.md  LOCAL_MODEL_MAPPING.md
Cloud AI interface/01_Interface/: CloudAIRequest.cs  CloudAIResponse.cs  CloudAIService.cs  (+6 more)
backend/: Dockerfile  app.py  complexity_reasoner.py  db.py  model_planner.py  optimizer.py  spec_engine.py  storage.py
docker/: Dockerfile  Dockerfile.cuda  compose.cpu.yaml  compose.cuda.yaml  compose.dev.yaml  compose.lora.yaml  compose.train.yaml  compose.yaml
docs/: CONTEXT_LENGTH.md  CUSTOM_MODEL.md  DEPLOYMENT.md  PORT_CONFLICT.md  avalonia-ui.md  winui-ui.md
embedding-server/: Dockerfile  app.py
hardware-detector/: Dockerfile  app.py
language-worker/: Dockerfile  app.py
launcher/: README.md  build.ps1  go.mod  main.go
model-server/: Dockerfile  app.py  infer_engine.py
models/: README.md
publish/: README.md  start-local-ai.cmd  start-local-ai.ps1
scripts/: bootstrap_cold_start.py  build-publish.ps1  build_dataset.py  check-portability.ps1  compare_lora.py  db_backup.ps1  download_model.py  finetune_run.py  gpu_check.py  healthcheck.ps1  install-windows-tasks.ps1  maintenance.ps1  package-release.ps1  preflight.py  run_eval.py  sync-dotnet-ai.ps1  train_lora.py  up.ps1  up.sh  verify-all.ps1
secrets/: README.md  hf_token.txt.example
vision-server/: Dockerfile  app.py
web-ui/: Dockerfile  index.html  nginx.conf
(+638 files in other folders)
