[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-optimizer"
version = "0.1.0"
description = "Local-first code optimization core with CLI and optional API adapters."
requires-python = ">=3.11"

[project.scripts]
ai-code-optimize = "adapters.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "adapters*"]
